@@ -88,7 +88,7 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
             xmlLoader.loadConfigHolder(xml);
             fail("should have thrown XsdValidationException");
         } catch (XsdValidationException e) {
-            assertThat(e.getMessage()).containsAnyOf(("Duplicate unique value [scm-name] declared for identity constraint of element \"scms\"."), "Duplicate unique value [scm-name] declared for identity constraint \"uniqueSCMName\" of element \"scms\"."
+            assertThat(e.getMessage()).containsAnyOf("Duplicate unique value [scm-name] declared for identity constraint of element \"scms\".", "Duplicate unique value [scm-name] declared for identity constraint \"uniqueSCMName\" of element \"scms\"."
                     );
         }
     }
@@ -132,7 +132,7 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
 
         GoConfigHolder configHolder = xmlLoader.loadConfigHolder(xml);
 
-        assertThat(configHolder.config.getSCMs().get(0).getId()).isNotNull();
+        assertThat(configHolder.config.getSCMs().getFirst().getId()).isNotNull();
     }
 
     @Test
@@ -143,7 +143,7 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
         scmConfiguration.add(new SCMProperty("SCM-KEY3").with(REQUIRED, false).with(PART_OF_IDENTITY, false).with(SECURE, true));
         SCMMetadataStore.getInstance().addMetadataFor("plugin-1", new SCMConfigurations(scmConfiguration), null);
 
-        String xml = ("""
+        String xml = """
             <cruise schemaVersion='%d'>
             <scms>
                 <scm id='scm-id-1' name='name-1'>
@@ -181,7 +181,7 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
                   </configuration>
                 </scm>
               </scms>
-            </cruise>""").formatted(GoConstants.CONFIG_SCHEMA_VERSION);
+            </cruise>""".formatted(GoConstants.CONFIG_SCHEMA_VERSION);
 
         try {
             xmlLoader.loadConfigHolder(xml);
@@ -193,7 +193,7 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
 
     @Test
     public void shouldLoadAutoUpdateValueForSCMWhenLoadedFromConfigFile() throws Exception {
-        String configTemplate = ("""
+        String configTemplate = """
             <cruise schemaVersion='%d'>
             <scms>
               <scm id='2ef830d7-dd66-42d6-b393-64a84646e557' name='scm-name' autoUpdate='%%s' >
@@ -206,7 +206,7 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
                    </configuration>
                </scm>
             </scms>
-            </cruise>""").formatted(GoConstants.CONFIG_SCHEMA_VERSION);
+            </cruise>""".formatted(GoConstants.CONFIG_SCHEMA_VERSION);
         String configContent = String.format(configTemplate, false);
         GoConfigHolder holder = xmlLoader.loadConfigHolder(configContent);
         SCM scm = holder.config.getSCMs().find("2ef830d7-dd66-42d6-b393-64a84646e557");
@@ -220,7 +220,7 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
 
     @Test
     public void shouldResolveSCMReferenceElementForAMaterialInConfig() throws Exception {
-        String xml = ("""
+        String xml = """
             <cruise schemaVersion='%d'>
             <scms>
                 <scm id='scm-id' name='scm-name'>
@@ -246,19 +246,19 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
                   </jobs>
                 </stage>
               </pipeline>
-            </pipelines></cruise>""").formatted(GoConstants.CONFIG_SCHEMA_VERSION);
+            </pipelines></cruise>""".formatted(GoConstants.CONFIG_SCHEMA_VERSION);
 
         GoConfigHolder goConfigHolder = xmlLoader.loadConfigHolder(xml);
         PipelineConfig pipelineConfig = goConfigHolder.config.pipelineConfigByName(new CaseInsensitiveString("new_name"));
-        PluggableSCMMaterialConfig pluggableSCMMaterialConfig = (PluggableSCMMaterialConfig) pipelineConfig.materialConfigs().get(0);
-        assertThat(pluggableSCMMaterialConfig.getSCMConfig()).isEqualTo(goConfigHolder.config.getSCMs().get(0));
+        PluggableSCMMaterialConfig pluggableSCMMaterialConfig = (PluggableSCMMaterialConfig) pipelineConfig.materialConfigs().getFirst();
+        assertThat(pluggableSCMMaterialConfig.getSCMConfig()).isEqualTo(goConfigHolder.config.getSCMs().getFirst());
         assertThat(pluggableSCMMaterialConfig.getFolder()).isNull();
         assertThat(pluggableSCMMaterialConfig.filter()).isEqualTo(new Filter());
     }
 
     @Test
     public void shouldReadFolderAndFilterForPluggableSCMMaterialConfig() throws Exception {
-        String xml = ("""
+        String xml = """
             <cruise schemaVersion='%d'>
             <scms>
                 <scm id='scm-id' name='scm-name'>
@@ -289,12 +289,12 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
                   </jobs>
                 </stage>
               </pipeline>
-            </pipelines></cruise>""").formatted(GoConstants.CONFIG_SCHEMA_VERSION);
+            </pipelines></cruise>""".formatted(GoConstants.CONFIG_SCHEMA_VERSION);
 
         GoConfigHolder goConfigHolder = xmlLoader.loadConfigHolder(xml);
         PipelineConfig pipelineConfig = goConfigHolder.config.pipelineConfigByName(new CaseInsensitiveString("new_name"));
-        PluggableSCMMaterialConfig pluggableSCMMaterialConfig = (PluggableSCMMaterialConfig) pipelineConfig.materialConfigs().get(0);
-        assertThat(pluggableSCMMaterialConfig.getSCMConfig()).isEqualTo(goConfigHolder.config.getSCMs().get(0));
+        PluggableSCMMaterialConfig pluggableSCMMaterialConfig = (PluggableSCMMaterialConfig) pipelineConfig.materialConfigs().getFirst();
+        assertThat(pluggableSCMMaterialConfig.getSCMConfig()).isEqualTo(goConfigHolder.config.getSCMs().getFirst());
         assertThat(pluggableSCMMaterialConfig.getFolder()).isEqualTo("dest");
         assertThat(pluggableSCMMaterialConfig.filter()).isEqualTo(new Filter(new IgnoredFiles("x"), new IgnoredFiles("y")));
     }
@@ -302,7 +302,7 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
     @Test
     public void shouldBeAbleToResolveSecureConfigPropertiesForSCMs() throws Exception {
         String encryptedValue = new GoCipher().encrypt("secure-two");
-        String xml = ("""
+        String xml = """
             <cruise schemaVersion='%d'>
             <scms>
                 <scm id='scm-id' name='name'>
@@ -336,7 +336,7 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
                   </jobs>
                 </stage>
               </pipeline>
-            </pipelines></cruise>""").formatted(GoConstants.CONFIG_SCHEMA_VERSION, encryptedValue);
+            </pipelines></cruise>""".formatted(GoConstants.CONFIG_SCHEMA_VERSION, encryptedValue);
 
         //meta data of scm
         SCMPropertyConfiguration scmConfiguration = new SCMPropertyConfiguration();
@@ -346,9 +346,9 @@ public class SCMConfigXmlLoaderTest extends AbstractConfigXmlLoaderTest {
         SCMMetadataStore.getInstance().addMetadataFor("plugin-id", new SCMConfigurations(scmConfiguration), null);
 
         GoConfigHolder goConfigHolder = xmlLoader.loadConfigHolder(xml);
-        SCM scmConfig = goConfigHolder.config.getSCMs().getFirstOrNull();
+        SCM scmConfig = goConfigHolder.config.getSCMs().getFirst();
         PipelineConfig pipelineConfig = goConfigHolder.config.pipelineConfigByName(new CaseInsensitiveString("new_name"));
-        PluggableSCMMaterialConfig pluggableSCMMaterialConfig = (PluggableSCMMaterialConfig) pipelineConfig.materialConfigs().get(0);
+        PluggableSCMMaterialConfig pluggableSCMMaterialConfig = (PluggableSCMMaterialConfig) pipelineConfig.materialConfigs().getFirst();
         assertThat(pluggableSCMMaterialConfig.getSCMConfig()).isEqualTo(scmConfig);
         Configuration configuration = pluggableSCMMaterialConfig.getSCMConfig().getConfiguration();
         assertThat(configuration.get(0).getConfigurationValue().getValue()).isEqualTo("value");
